# lerobot_model_deploy_test

./: .gitignore  LICENSE  README.md  __init__.py  dataset_pipeline.md  pyproject.toml  运行命令.md  部署说明.md
docx/: 1. 动作空间设计及数据集和部署建议_2026_6_19.md  1.1 lerobot_act_franka_action_notes_2026_6_19.md  2. 视觉模态dataset设计_2026_6_19.md  3. dataset_pipeline_update_2026_6_19.md
policy_adapters/: __init__.py  deploy_live_policy.py  live_ros_http_robot_io.py  replay_lerobot_v3.py  输入数据说明.md
policy_adapters/lerobotACT_train/: LeRobot ACT adpater.md  deploy_lerobot_act_runtime.py  lerobot_act_adapter.py  offline_eval_lerobot_act.py  train_lerobot_act_minimal.py
policy_adapters/lerobotDP_train/: LeRobot_DP_adapter.md  deploy_lerobot_dp_runtime.py  lerobot_dp_adapter.py  offline_eval_lerobot_dp.py  train_lerobot_dp_minimal.py
policy_adapters/lerobotPI_train/: LeRobot_PI_adapter.md  __init__.py  deploy_lerobot_pi_runtime.py  lerobot_pi_adapter.py  offline_eval_lerobot_pi.py  train_lerobot_pi_minimal.py
policy_adapters/utils/: __init__.py  action_space.py  common.py  image_ROI_resize_256.py  online_policy_adapter.py  select_front_roi.py
