# sudo apt install build-essential cmake
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lerobot_model_deploy_test"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
# 项目依赖项
dependencies = [
    # pytorch相关依赖项
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "lightning",
    "torchmetrics",
    "torchsummary",
    "tiktoken",
    
    "wandb",

    # 其他依赖项
    "numpy",
    "matplotlib",
    "opencv-python",
    "pandas",
    "pyarrow",
    "scipy",
    "pillow",
    "requests",
    "typing-extensions",
    "ipython","ipykernel","uv",
    "nbconvert",
    "nbclient",
    "tqdm",
    "scikit-learn",
    "flow-matching==1.0.10",

    # lerobot
    "lerobot",
    "torchcodec==0.7.0",
    "transformers==5.3.0"
]


[tool.uv.sources]
lerobot = { path = "./lerobot", editable = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# 将项目标记为非包（non-package）
[tool.uv]
package = false
